# sephib.github.io

./: .envrc  .gitignore  .pre-commit-config.yaml  Dagster-neo4j.html  Makefile  README.md  agent-dailies-and-the-flipped-development-cycle.html  archives.html  authors.html  automating-env-files-in-git-worktrees.html  categories.html  cdf-histogram-bokeh.html  dataclass-pipeline.html  design-patterns-in-ml-and-mlops.html  first-post-on-my-sweet-new-blog.html  index.html  index2.html  justfile  mixed-traffic-when-agentic-and-traditional-teams-share-the-same-road.html  modernizing-static-site-with-uv-and-vibe-kanban.html  my-2cents-after-reviewing-an-academic-project.html  my-2cents-worth-after-reviewing-an-academic-project.html  nan-bites.html  package_list.txt  panel-dashboard.html  pelican_commands.txt  pelicanconf.py  publishconf.py  pyproject.toml  reflection-on-2021.html  requirements.txt  sitemap.xml  speaking-to-the-agent-voice-is-the-developers-new-runtime.html  tags.html  tasks.py  the-2-hour-daily-when-the-meeting-becomes-the-work.html  two-wheels-one-ev9-cycling-from-vienna-to-brno-for-red-hats-nhce.html  two-wheels-one-ev9-cycling-vienna-to-brno-for-red-hats-nhce.html  warming-up-my-first-blog-post.html  when-datapipes-meets-gcs.html  (+1 more)
author/: joseph-sephi-berry.html  sephi-berry-david-katz.html  sephi-berry.html  sephi-berry2.html
category/: dataanalysis-posts.html  development.html  misc.html  pipelines-posts.html  posts-agentic-sdlc-agentic-engineering.html  posts-agentic-sdlc-daily.html  posts-pipeline.html  posts.html
content/: 1st_anniversary_artlist.md  (+33 more)
(+77 files in other folders)
