[project]
name = "sephib-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython-genutils>=0.2.0",
    "ipython>=8.27.0",
    "jinja2==3.0.3",
    "nbconvert>=5.6.1",
    "pelican-jupyter>=0.10.1",
    "pelican<=4.9.1",
]
