[project]
name = "sephib-github-io"
version = "0.1.0"
description = "Static site generator for Sephi's blog using Pelican"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pelican<=4.9.1",
    "pelican-jupyter>=0.10.1",
    "jupyter>=1.0",
    "jupyterlab",
    "ipython>=7.14.0,<8.0.0",
    "nbconvert>=5.6.1,<6",
    "beautifulsoup4",
    "ghp-import>=2.1.0",
    "pandas",
    "pelican-sitemap",
    "minchin.pelican.plugins.optimize-images>=1.1.1",
    "jinja2==3.0.3",
    "markdown>=3.4.0",
    "invoke>=2.2.0",
    "livereload>=2.6.3",
    "matplotlib",
    "numpy",
    "bokeh",
    "holoviews",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["tasks.py", "pelicanconf.py", "publishconf.py", "content/", "themes/"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
